--- a/client/package.json
+++ b/client/package.json
@@ -121,6 +121,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^9.4.0",
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11"
   }
