--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001",
+  "engines": {
+    "node": "^13.2.0"
+  },
   "dependencies": {
     "@babel/core": "7.1.0",
     "@material-ui/core": "^4.8.3",
